Fixed hero image so it centers on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ button,
     height: 300px;
     width: 600px;
     flex-shrink: 0;
+    margin: 0 auto;
 }
 
 .cards-section {
